<?xml version="1.0"?>
<package format="3">
  <name>jsk_python_orocos_kdl_python3</name>
  <version>1.4.2</version>
  <description>
    This package contains the python bindings PyKDL for the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project.
    This repository is for python3 compatibility in melodic environment.
    Supported by ROS community.
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>
  <url>https://github.com/jsk-ros-pkg/orocos_kinematics_dynamics_python3</url>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>

  <depend>python3</depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>python3-sip</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
