<?xml version="1.0"?>
<package format="3">
  <name>python_orocos_kdl_python3</name>
  <version>1.4.1</version>
  <description>
    This package contains the python bindings PyKDL for the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project. 
  </description>
  <maintainer email="ruben@intermodalics.eu">Ruben Smits</maintainer>
  <url>http://wiki.ros.org/python_orocos_kdl</url>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>

  <depend>python3</depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>python3-sip</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
